fix theme picker button on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -281,7 +281,6 @@
 
   header {
     height: 57px;
-    overflow: hidden;
   }
 }
 
